syntax = "proto3";

package paxoskv;
option go_package = "github.com/AllenShaw19/paxos/exmaple/paxoskv/proto;proto";

message KVOperator {
  string key = 1;
  bytes value = 2;
  uint64 version = 3;
  uint32 operator = 4;
  uint32 sid = 5;
};

message KVData {
  bytes value = 1;
  uint64 version = 2;
  bool is_deleted = 3;
};

message KVResponse {
  KVData data = 1;
  int32 ret = 2;
  uint64 master_nodeid = 3;
};

service PaxosKVServer {
  rpc Put(KVOperator) returns (KVResponse) { }
  rpc GetLocal(KVOperator) returns (KVResponse) { }
  rpc GetGlobal(KVOperator) returns (KVResponse) { }
  rpc Delete(KVOperator) returns (KVResponse) { }
}